# px4_sitl_tutorials

./: .gitignore  README.md  run_sim.bash
collision_avoidance/: CMakeLists.txt  package.xml
collision_avoidance/include/collision_avoidance/: collision_avoidance.h
collision_avoidance/src/: collision_avoidance_algo.cpp  main.cpp
goal_allocator/: CMakeLists.txt  package.xml
goal_allocator/include/: pose_controller.h  state_manager.h
goal_allocator/script/: allocator.py  app.py  goal_allocator.py  image_segmentation.py  mission_control_ui.py
goal_allocator/script/utils/: allocator.py  image_segmentation.py
goal_allocator/src/: pose_controller.cpp  state_manager.cpp
goal_allocator/srv/: goal.srv
mavros_bridge/: CMakeLists.txt  package.xml
mavros_bridge/include/mavros_bridge/: offboard.h
mavros_bridge/launch/: spawn_sitl.launch
mavros_bridge/src/: offboard.cpp  velocity.cpp
sitl_tutorials/: CMakeLists.txt  package.xml
sitl_tutorials/launch/: spawn_gazebo_world.launch  spawn_sitl.launch
sitl_tutorials/src/: offboard.cpp  velocity.cpp
